--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -17,10 +17,10 @@
    "source": [
     "# Metadata\n",
     "\n",
-    "- Full Name:\n",
-    "- Userid:\n",
-    "- GitHub Repo URL:\n",
-    "- UVA Box URL:"
+    "- Full Name: James Siegener\n",
+    "- Userid: gnq2mr\n",
+    "- GitHub Repo URL: https://github.com/jamessiegener/DS-5001-Final-Project\n",
+    "- UVA Box URL: https://virginia.box.com/s/0deakjbcfh6l0l0i7rthv2592xdzt9fd"
    ]
   },
   {
@@ -141,11 +141,11 @@
     "Note that these are *not* documents in the sense used to describe a bag-of-words representation of a text, e.g. chapter.\n",
     "\n",
     "- UVA Box URL: https://virginia.box.com/s/x13cw57aa3bn2h618m3pgj0i4740wgha\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter: \n",
-    "- Number of observations:\n",
-    "- List of features, including at least three that may be used for model summarization (e.g. date, author, etc.):\n",
-    "- Average length of each document in characters: "
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Number of observations: 1974\n",
+    "- List of features, including at least three that may be used for model summarization (e.g. date, author, etc.): Album_Name, Album_Songs, Album_Artists, char_len\n",
+    "- Average length of each document in characters: 2520"
    ]
   },
   {
@@ -160,9 +160,9 @@
     "- UVA Box URL: https://virginia.box.com/s/g5tb58v4xha5rogq3gbw604jlselfftv\n",
     "- GitHub URL for notebook used to create:\n",
     "- Delimitter: \"|\"\n",
-    "- Number of observations Between (should be >= 500,000 and <= 2,000,000 observations.):\n",
-    "- OHCO Structure (as delimitted column names):\n",
-    "- Columns (as delimitted column names, including `token_str`, `term_str`, `pos`, and `pos_group`):"
+    "- Number of observations Between (should be >= 500,000 and <= 2,000,000 observations.): 964,610\n",
+    "- OHCO Structure (as delimitted column names): `album_id`,`song_id`,`verse_num`,`token_num`\n",
+    "- Columns (as delimitted column names, including `token_str`, `term_str`, `pos`, and `pos_group`): `token_str`, `term_str`, `pos`, and `pos_group`"
    ]
   },
   {
@@ -175,14 +175,32 @@
     "The unique word types (terms) in the corpus.\n",
     "\n",
     "- UVA Box URL: https://virginia.box.com/s/8wz6k6bj5jpzuwcw6l3kmkuoe0k8q80a\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Number of observations:\n",
-    "- Columns (as delimitted names, including `n`, `p`', `i`, `dfidf`, `porter_stem`, `max_pos` and `max_pos_group`, `stop`):\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Number of observations: 25064\n",
+    "- Columns (as delimitted names, including `n`, `p`', `i`, `dfidf`, `porter_stem`, `max_pos` and `max_pos_group`, `stop`): `n`, `p`', `i`, `dfidf`, `max_pos`, `max_pos_group`, `stop`, `porter_stem`\n",
     "- Note: Your VOCAB may contain ngrams. If so, add a feature for `ngram_length`.\n",
     "- List the top 20 significant words in the corpus by DFIDF.\n",
-    "\n",
-    "(INSERT LIST HERE)"
+    "too,1032.282762\n",
+    "ill,1032.278672\n",
+    "feel,1032.272558\n",
+    "come,1032.264967\n",
+    "tell,1032.264967\n",
+    "want,1032.242976\n",
+    "then,1032.172870\n",
+    "been,1031.781146\n",
+    "need,1031.768128\n",
+    "right,1031.453660\n",
+    "are,1031.268117\n",
+    "let,1031.237665\n",
+    "way,1030.663884\n",
+    "wanna,1030.583547\n",
+    "thats,1030.061592\n",
+    "have,1030.061592\n",
+    "take,1029.872454\n",
+    "could,1028.223764\n",
+    "off,1028.090738\n",
+    "think,1028.090738"
    ]
   },
   {
@@ -202,12 +220,12 @@
     "\n",
     "A bag-of-words representation of the CORPUS.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Bag (expressed in terms of OHCO levels):\n",
-    "- Number of observations:\n",
-    "- Columns (as delimitted names, including `n`, `tfidf`):"
+    "- UVA Box URL: https://virginia.box.com/s/e9wyf2ue33v3tz3h0q80v49pwf7e4g0x\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Bag (expressed in terms of OHCO levels): ['album_title', 'song_id']\n",
+    "- Number of observations: 331342\n",
+    "- Columns (as delimitted names, including `n`, `tfidf`): 'term_str','n','tfidf'"
    ]
   },
   {
@@ -221,11 +239,11 @@
     "\n",
     "A represenation of the BOW as a sparse count matrix.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL of BOW used to generate (if applicable):\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Bag (expressed in terms of OHCO levels):"
+    "- UVA Box URL: https://virginia.box.com/s/2ynvltqc32u3mdi2zlhimvk4um4hgw1d\n",
+    "- UVA Box URL of BOW used to generate (if applicable): https://virginia.box.com/s/e9wyf2ue33v3tz3h0q80v49pwf7e4g0x\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Bag (expressed in terms of OHCO levels): ['album_title', 'song_id']"
    ]
   },
   {
@@ -237,11 +255,34 @@
     "\n",
     "A Document-Term matrix with TFIDF values.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL of DTM or BOW used to create:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Description of TFIDIF formula ($\\LaTeX$ OK):"
+    "- UVA Box URL: https://virginia.box.com/s/1e4mugger7w53ngqwjhplozjvopqj7s9\n",
+    "- UVA Box URL of DTM or BOW used to create: https://virginia.box.com/s/e9wyf2ue33v3tz3h0q80v49pwf7e4g0x\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Description of TFIDIF formula ($\\LaTeX$ OK): \n",
+    "**Term Frequency (TF):**\n",
+    "\n",
+    "$$\n",
+    "\\text{TF}_{t,d} = \\frac{f_{t,d}}{\\max(f_{t,d'})}\n",
+    "$$\n",
+    "\n",
+    "**Document Frequency (DF):**\n",
+    "\n",
+    "$$\n",
+    "\\text{DF}_t = \\sum_{d=1}^{N} \\mathbf{1}_{t \\in d}\n",
+    "$$\n",
+    "\n",
+    "**Inverse Document Frequency (IDF):**\n",
+    "\n",
+    "$$\n",
+    "\\text{IDF}_t = \\log_2\\left(\\frac{N_{\\text{docs}}}{\\text{DF}_t}\\right)\n",
+    "$$\n",
+    "\n",
+    "**TF-IDF:**\n",
+    "\n",
+    "$$\n",
+    "\\text{TF-IDF}_{t,d} = \\text{TF}_{t,d} \\times \\text{IDF}_t\n",
+    "$$\n"
    ]
   },
   {
@@ -263,12 +304,12 @@
    "source": [
     "A Document-Term matrix with L2 normalized TFIDF values.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL of source TFIDF table:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Number of features (i.e. significant words):\n",
-    "- Principle of significant word selection:"
+    "- UVA Box URL: https://virginia.box.com/s/cnaikr1rasxl20kvqutbuynkugr0q0il\n",
+    "- UVA Box URL of source TFIDF table: https://virginia.box.com/s/1e4mugger7w53ngqwjhplozjvopqj7s9\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Number of features (i.e. significant words): 1000\n",
+    "- Principle of significant word selection: dfidf"
    ]
   },
   {
@@ -286,14 +327,14 @@
    "source": [
     "## PCA Components (4)\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL of the source TFIDF_L2 table:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Number of components:\n",
-    "- Library used to generate:\n",
-    "- Top 5 positive terms for first component:\n",
-    "- Top 5 negative terms for second component:"
+    "- UVA Box URL: https://virginia.box.com/s/0jf0k539qufkci95m2hl2kjsmeh1mh41\n",
+    "- UVA Box URL of the source TFIDF_L2 table: https://virginia.box.com/s/cnaikr1rasxl20kvqutbuynkugr0q0il\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Number of components: 10\n",
+    "- Library used to generate: Scratch implementation from class\n",
+    "- Top 5 positive terms for first component: love baby heart were babe \n",
+    "- Top 5 negative terms for second component: was didnt never looks youd"
    ]
   },
   {
@@ -307,9 +348,9 @@
     "\n",
     "The document-component matrix generated.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- UVA Box URL: https://virginia.box.com/s/1q7jq8ki0zu3gwj6wtdna9cwg0ql2un5\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -323,9 +364,9 @@
     "\n",
     "The component-term matrix generated.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- UVA Box URL: https://virginia.box.com/s/hg5xs9d615i3ghsntk411bvq8009u3gf\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -345,9 +386,9 @@
     "\n",
     "(INSERT IMAGE HERE)\n",
     "\n",
-    "Briefly describe the nature of the polarity you see in the first component:\n",
+    "Briefly describe the nature of the polarity you see in the first component: \n",
     "\n",
-    "(INSERT DESCRIPTION HERE)"
+    "In the first component, there is a very clear separation between albums by artists that are generally considered rappers, like Kanye West, and Eminem, whereas the positive has more of the pop artists like Ariana Grande and Taylor Swift."
    ]
   },
   {
@@ -369,7 +410,7 @@
     "\n",
     "Briefly describe the nature of the polarity you see in the second component:\n",
     "\n",
-    "(INSERT DESCRIPTION HERE)"
+    "This component I can not see too extreme of a polarity, but it did manage to separate all of Eminem, Drake, and Ariana Grande's albums in the negative, while the positive is much more mixed. "
    ]
   },
   {
@@ -381,8 +422,8 @@
    "source": [
     "## LDA TOPIC (4)\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL of count matrix used to create:\n",
+    "- UVA Box URL: https://virginia.box.com/s/9yu44vm1q69nr3we5r9t7em0mx2aqbey\n",
+    "- UVA Box URL of count matrix used to create: \n",
     "- GitHub URL for notebook used to create:\n",
     "- Delimitter:\n",
     "- Libary used to compute:\n",
@@ -390,11 +431,11 @@
     "- Number of components:\n",
     "- Any other parameters used:\n",
     "- Top 5 words and best-guess labels for topic five topics by mean document weight:\n",
-    "  - T00:\n",
-    "  - T01:\n",
-    "  - T02:\n",
-    "  - T03:\n",
-    "  - T04:"
+    "  - T00: Time Love Thing Gonna Heart - Love\n",
+    "  - T01: Baby Time Mind Boy Youre - Love/nicknames for lovers\n",
+    "  - T02: Love Yeah Woah Baby Time - Expressing love \n",
+    "  - T03: Shit Hands Bitch Fuck People - Expletives/sexual\n",
+    "  - T04: Night Lights Yeah Time Love - Love in the City"
    ]
   },
   {
@@ -432,7 +473,7 @@
    "source": [
     "## LDA + PCA Visualization (4)\n",
     "\n",
-    "Apply PCA to the PHI table and plot the topics in the space opened by the first two components.\n",
+    "Apply PCA to the THETA table and plot the topics in the space opened by the first two components.\n",
     "\n",
     "Size the points based on the mean document weight of each topic (using the THETA table).\n",
     "\n",
@@ -622,16 +663,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "800d056b-2bca-4724-be9c-91ea640b8129",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-04-21T03:38:36.094781Z",
-     "start_time": "2025-04-21T03:38:36.089957Z"
+     "end_time": "2025-05-03T02:33:04.498643Z",
+     "start_time": "2025-05-03T02:33:04.369322Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'HAC' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
+      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
+      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mHAC\u001B[49m(WV.sample(\u001B[32m150\u001B[39m)).plot()\n",
+      "\u001B[31mNameError\u001B[39m: name 'HAC' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "HAC(WV.sample(150)).plot()"
+   ]
   }
  ],
  "metadata": {
