--- a/FinalProject.ipynb
+++ b/FinalProject.ipynb
@@ -144,7 +144,7 @@
     "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
     "- Delimitter: \"|\"\n",
     "- Number of observations: 1974\n",
-    "- List of features, including at least three that may be used for model summarization (e.g. date, author, etc.): Album_Name, Album_Songs, Album_Artists, char_len\n",
+    "- List of features, including at least three that may be used for model summarization (e.g. date, author, etc.): 'album_title', 'artist_name', 'song_title', 'song_id', 'char_len', 'release_year', 'label', 'genius_url'\n",
     "- Average length of each document in characters: 2520"
    ]
   },
@@ -160,8 +160,8 @@
     "- UVA Box URL: https://virginia.box.com/s/g5tb58v4xha5rogq3gbw604jlselfftv\n",
     "- GitHub URL for notebook used to create:\n",
     "- Delimitter: \"|\"\n",
-    "- Number of observations Between (should be >= 500,000 and <= 2,000,000 observations.): 964,610\n",
-    "- OHCO Structure (as delimitted column names): `album_id`,`song_id`,`verse_num`,`token_num`\n",
+    "- Number of observations Between (should be >= 500,000 and <= 2,000,000 observations.): 912,702\n",
+    "- OHCO Structure (as delimitted column names): `album_title`,`song_id`,`verse_num`,`token_num`\n",
     "- Columns (as delimitted column names, including `token_str`, `term_str`, `pos`, and `pos_group`): `token_str`, `term_str`, `pos`, and `pos_group`"
    ]
   },
@@ -382,9 +382,9 @@
     "\n",
     "Also include a scatterplot of the loadings for the same two components. (This does not need a feature mapped onto color.)\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](PCA1.png)\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](loadings1.png)\n",
     "\n",
     "Briefly describe the nature of the polarity you see in the first component: \n",
     "\n",
@@ -404,9 +404,9 @@
     "\n",
     "Also include a scatterplot of the loadings for the same two components. (This does not need a feature mapped onto color.)\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](pca2.png)\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](loadings2.png)\n",
     "\n",
     "Briefly describe the nature of the polarity you see in the second component:\n",
     "\n",
@@ -423,18 +423,18 @@
     "## LDA TOPIC (4)\n",
     "\n",
     "- UVA Box URL: https://virginia.box.com/s/9yu44vm1q69nr3we5r9t7em0mx2aqbey\n",
-    "- UVA Box URL of count matrix used to create: \n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Libary used to compute:\n",
-    "- A description of any filtering, e.g. POS (Nouns and Verbs only):\n",
-    "- Number of components:\n",
-    "- Any other parameters used:\n",
+    "- UVA Box URL of count matrix used to create: https://virginia.box.com/s/1q7jq8ki0zu3gwj6wtdna9cwg0ql2un5 \n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Libary used to compute: scikit learn\n",
+    "- A description of any filtering, e.g. POS (Nouns and Verbs only): Only Nouns\n",
+    "- Number of components: 20\n",
+    "- Any other parameters used: max_df=0.9, min_df=2\n",
     "- Top 5 words and best-guess labels for topic five topics by mean document weight:\n",
     "  - T00: Time Love Thing Gonna Heart - Love\n",
-    "  - T01: Baby Time Mind Boy Youre - Love/nicknames for lovers\n",
-    "  - T02: Love Yeah Woah Baby Time - Expressing love \n",
-    "  - T03: Shit Hands Bitch Fuck People - Expletives/sexual\n",
+    "  - T01: Baby Time Mind Boy Youre - Romantic partners\n",
+    "  - T02: Love Yeah Woah Baby Time - Declarations of Love\n",
+    "  - T03: Shit Hands Bitch Fuck People - Profanity/Aggression\n",
     "  - T04: Night Lights Yeah Time Love - Love in the City"
    ]
   },
@@ -447,9 +447,9 @@
    "source": [
     "## LDA THETA (4)\n",
     "\n",
-    "- UVA Box URL:\n",
+    "- UVA Box URL: https://virginia.box.com/s/p6zgozyov2o07cwrn1amyyeq7awq9nln\n",
     "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -461,9 +461,9 @@
    "source": [
     "## LDA PHI (4)\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- UVA Box URL: https://virginia.box.com/s/r49fp9amc6rmq8gsmmx29yuh8h7iwo9r\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -481,9 +481,9 @@
     "\n",
     "Provide a brief interpretation of what you see.\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](lda_pca.png)\n",
     "\n",
-    "(INSERT INTERPRETATION HERE)"
+    "The two largest dots, representing the two topics with the highest mean weight, are at the extremes of the scatterplot. T017 is at the very positive end of component 0, and T04 is at the very positive end of component 1. These topics both are colored blue, meaning that they are most prevalent in the work of Taylor Swift. This to me indicates that Taylor Swift's work is distinct from the other artists in some way that can easily be represented through the topics, or that her work is overwhelming the algorithm, as she is the most prevalent artist. The topics are also only dominated by 5 artists, Taylor Swift, Drake, Eminem, Kanye West, and Beyonce, which could indicate that their work is most influential within the datset."
    ]
   },
   {
@@ -495,10 +495,10 @@
     "\n",
     "Sentiment values associated with a subset of the VOCAB from a curated sentiment lexicon.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- UVA Box URL for source lexicon:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- UVA Box URL: https://virginia.box.com/s/swug0pvpyvo8dghe0m55stir3usxdx7u\n",
+    "- UVA Box URL for source lexicon: https://virginia.box.com/s/elvk3paqb9csjrylluo44st7wepwj3nk\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -512,9 +512,9 @@
     "\n",
     "Sentiment values from VOCAB_SENT mapped onto BOW.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:"
+    "- UVA Box URL: https://virginia.box.com/s/4c4nvdn4xwfmiwoxfqgp494agieupxn6\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\""
    ]
   },
   {
@@ -526,10 +526,10 @@
     "\n",
     "Computed sentiment per bag computed from BOW_SENT.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Document bag expressed in terms of OHCO levels:"
+    "- UVA Box URL: https://virginia.box.com/s/upargjtbcv1n0682py9m2ckvlunyp6lw\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Document bag expressed in terms of OHCO levels: ['album_title', 'song_id']"
    ]
   },
   {
@@ -545,7 +545,7 @@
     "\n",
     "You may use a bar chart or a line graph.\n",
     "\n",
-    "(INSERT IMAGE HERE)"
+    "![Example Image](sentimentovertime.png)\n"
    ]
   },
   {
@@ -557,12 +557,12 @@
     "\n",
     "A table of word2vec features associated with terms in the VOCAB table.\n",
     "\n",
-    "- UVA Box URL:\n",
-    "- GitHub URL for notebook used to create:\n",
-    "- Delimitter:\n",
-    "- Document bag expressed in terms of OHCO levels:\n",
-    "- Number of features generated:\n",
-    "- The library used to generate the embeddings:"
+    "- UVA Box URL: https://virginia.box.com/s/u921fniv9i3crvcq780p115rzjy75wnk\n",
+    "- GitHub URL for notebook used to create: https://github.com/jamessiegener/DS-5001-Final-Project/blob/main/textasdata_report.ipynb\n",
+    "- Delimitter: \"|\"\n",
+    "- Document bag expressed in terms of OHCO levels: ['album_title','song_id']\n",
+    "- Number of features generated: 200\n",
+    "- The library used to generate the embeddings: gensim"
    ]
   },
   {
@@ -576,9 +576,9 @@
     "\n",
     "Describe a cluster in the plot that captures your attention.\n",
     "\n",
-    "(INSERT IMAGE HERE)\n",
+    "![Example Image](tsne.png)\n",
     "\n",
-    "(INSERT DESCRIPTION HERE)"
+    "There is a cluster located at around (10,20) that contains many words related to time. This cluster is interesting to me because it seems to float above the main group of words in the center. It contains the words, \"minute,\" \"hour,\" \"day,\" \"year,\" \"friday,\" \"week,\" \"next,\" \"same\" and other words that either describe time or are used frequently with time words. "
    ]
   },
   {
@@ -660,33 +660,6 @@
     "\n",
     "(INSERT INTERPRETATION HERE)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "800d056b-2bca-4724-be9c-91ea640b8129",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-05-03T02:33:04.498643Z",
-     "start_time": "2025-05-03T02:33:04.369322Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'HAC' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[31m---------------------------------------------------------------------------\u001B[39m",
-      "\u001B[31mNameError\u001B[39m                                 Traceback (most recent call last)",
-      "\u001B[36mCell\u001B[39m\u001B[36m \u001B[39m\u001B[32mIn[1]\u001B[39m\u001B[32m, line 1\u001B[39m\n\u001B[32m----> \u001B[39m\u001B[32m1\u001B[39m \u001B[43mHAC\u001B[49m(WV.sample(\u001B[32m150\u001B[39m)).plot()\n",
-      "\u001B[31mNameError\u001B[39m: name 'HAC' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "HAC(WV.sample(150)).plot()"
-   ]
   }
  ],
  "metadata": {
@@ -705,7 +678,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.11"
   },
   "toc-autonumbering": true,
   "toc-showmarkdowntxt": false
